cache/b1d7b0885cb94749888fb368912285a5.txt

            <h1 class="postTitle">
                <a id="cb_post_title_url" class="postTitle2 vertical-middle" href="https://www.cnblogs.com/abyssdawn/p/18637075" title="发布于 2024-12-28 09:04">
    <span role="heading" aria-level="2">用 Ingram 和 masscan 来扫描全网存在漏洞的camera</span>
    

</a>

            </h1>
            <div class="clear"></div>
            <div class="postBody">
                <div id="cnblogs_post_body" class="blogpost-body cnblogs-markdown">
<h2 id="前言">前言</h2>
<p>大学的时候也写过和<code>Ingram</code>差不多的工具，不过那时候已经玩到没有兴致了，代码已不知道哪里去。没想到在Github看到了这个工具，实现思路和我的几乎一样，互联网就是这么神奇。</p>
<p>Ingram的Github：<a href="https://github.com/jorhelp/Ingram" target="_blank" rel="noopener nofollow">https://github.com/jorhelp/Ingram</a></p>
<p>本着不能让服务器闲着的想法，开始吧</p>
<h2 id="安装ingram">安装<code>Ingram</code></h2>
<pre><code class="language-bash">git clone https://github.com/jorhelp/Ingram.git
cd Ingram
pip3 install virtualenv
python3 -m virtualenv venv
source venv/bin/activate
pip3 install -r requirements.txt
</code></pre>
<p>安装后需要一个目标文件，这里用<code>masscan</code>来搞一波</p>
<h2 id="安装masscan">安装<code>masscan</code></h2>
<p>安装<code>masscan</code>的坑不少，有报错丢gpt就好了</p>
<p>安装步骤</p>
<pre><code class="language-bash">sudo yum groupinstall "Development Tools"
git clone https://github.com/robertdavidgraham/masscan
cd masscan
make
make install
</code></pre>
<p>不出意外这里make失败，报错信息</p>
<pre><code>src/massip-addr.c: In function ‘ipv6address_selftest’:
src/massip-addr.c:292:7: warning: excess elements in union initializer [enabled by default]
       {NULL, {{0, 0}, 0}}
       ^
src/massip-addr.c:292:7: warning: (near initialization for ‘tests[8].ip_addr.&lt;anonymous&gt;’) [enabled by default]
src/massip-addr.c:299:3: error: ‘for’ loop initial declarations are only allowed in C99 mode
   for (int i = 0; tests[i].name != NULL; i++) {
   ^
src/massip-addr.c:299:3: note: use option -std=c99 or -std=gnu99 to compile your code
src/massip-addr.c:296:13: warning: unused variable ‘ip’ [-Wunused-variable]
   ipaddress ip;
             ^
make: *** [tmp/massip-addr.o] Error 1
</code></pre>
<p>根据提示<code>note: use option -std=c99 or -std=gnu99 to compile your code</code>，修改 Makefile 来加入<code>-std=c99</code>或<code>-std=gnu99</code>选项。在 Makefile 中找到 CFLAGS 定义部分，并添加以下内容：</p>
<pre><code>CFLAGS += -std=gnu99
</code></pre>
<p>然后重新<code>make</code>，这次就成功了</p>
<p><img src="https://img2024.cnblogs.com/blog/2747555/202412/2747555-20241228090133654-189066108.png" alt="2024-12-27T09:08:58.png" loading="lazy"></p>
<p>完成之后，查看软件帮助信息：</p>
<pre><code class="language-bash">masscan -h
</code></pre>
<h2 id="获取活动主机">获取活动主机</h2>
<p>我这边ip段用的是纯真ip数据库，随便搜了一个地区</p>
<pre><code class="language-bash">masscan x.x.0.0/16 -p80,8000-8008 -oL results --max-rate 8000

或者通过指定扫描文件

masscan -p80,8000-8008 -iL 目标文件 -oL 结果文件 --rate 8000
</code></pre>
<p>很快不用5分钟就扫描完了。扫描全网可以用下面的命令</p>
<pre><code class="language-bash">masscan 0.0.0.0/0 -p0-65535 -oL all-results --max-rate 100000
</code></pre>
<p>masscan 运行完之后，将结果文件整理一下：<code>grep 'open' 结果文件 | awk '{printf"%s:%s\n", $4, $3}' &gt; targets.txt</code></p>
<p>结果文件整理成 <code>ip:port</code> 的格式</p>
<h2 id="开始最终的扫描">开始最终的扫描</h2>
<p>之后对这些主机进行扫描：<code>python run_ingram.py -i targets.txt -o out</code></p>
<p><img src="https://img2024.cnblogs.com/blog/2747555/202412/2747555-20241228090133648-1939599103.png" alt="2024-12-27T09:20:58.png" loading="lazy"></p>
<p>接下来就放在服务器慢慢跑吧</p>
<hr>
<p><img src="https://img2024.cnblogs.com/blog/2747555/202412/2747555-20241218222717143-1042054688.png" alt="image" loading="lazy"></p>

</div>
<div class="clear"></div>

            </div>
            <div class="postDesc">posted @ 
<span id="post-date" data-last-update-days="1.137961154685185" data-date-created="BlogServer.Application.Dto.BlogPost.BlogPostDto" data-date-updated="2024-12-28 09:04">2024-12-28 09:04</span>&nbsp;
<a href="https://www.cnblogs.com/abyssdawn">破晓一代</a>&nbsp;
阅读(<span id="post_view_count">98</span>)&nbsp;
评论(<span id="post_comment_count">0</span>)&nbsp;
<a href="https://i.cnblogs.com/EditPosts.aspx?postid=18637075" rel="nofollow">编辑</a>&nbsp;
<a href="javascript:void(0)" onclick="AddToWz(18637075);return false;">收藏</a>&nbsp;
<a href="javascript:void(0)" onclick="reportManager.report({ currentUserId: '', targetType: 'blogPost', targetId: '18637075', targetLink: 'https://www.cnblogs.com/abyssdawn/p/18637075', title: '用 Ingram 和 masscan 来扫描全网存在漏洞的camera' })">举报</a>
</div>
        